Set max length on inputs Max length was added on the form inputs to prevent too long names which will break the book cards design.

--- a/styles.css
+++ b/styles.css
@@ -36,8 +36,8 @@ body {
 
 .book-card {
   display: grid;
-  grid-template-rows: 80px 250px;
-  row-gap: 35px;
+  grid-template-rows: 100px 250px;
+  row-gap: 50px;
   background-color: var(--card-bg-color);
   color: var(--library-bg-color);
   width: 280px;
@@ -49,6 +49,11 @@ body {
 
 .book-title {
   font-size: 2.5rem;
+  justify-self: center;
+  height: 100px;
+  overflow: hidden;
+  overflow-wrap: break-word;
+  width: 90%;
   text-align: center;
   align-self: center;
   grid-area: 1 / 1 / 2 / 2;
@@ -134,6 +139,7 @@ label {
 
 input {
   width: 100%;
+  padding: 3px 4px 3px 5px;
 }
 
 #submit,
@@ -142,6 +148,10 @@ form button {
   height: 40px;
   border-radius: 7px;
   margin: 10px auto 0 auto;
+}
+
+form button {
+  margin-bottom: 20px;
 }
 
 /* slider */
